# pytest-super-setup-hooks

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  release.yml
demo/: .pre-commit-config.yaml  README.md  test_correct.py  test_django_style.py  test_edge_cases.py  test_violations.py
scripts/: update-release.sh
src/: fix.rs  lib.rs  main.rs
src/pytest_super_hooks/: __init__.py  __main__.py
tests/: fix_tests.rs  integration.rs  odd_cases.rs  real_world.rs  test_python_wrapper.py
