[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-super-hooks"
version = "0.12.1"
description = "Fast, Rust-based pre-commit hook for enforcing correct setUp/tearDown method usage in Python unittest"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Clinton Steiner"}
]
keywords = ["pre-commit", "pytest", "unittest", "linter", "code-quality"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/clintonsteiner/pytest-super-setup-hooks"
Repository = "https://github.com/clintonsteiner/pytest-super-setup-hooks"

[project.scripts]
pytest-super-hooks = "pytest_super_hooks:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_super_hooks"]
only-packages = true

[tool.hatch.build.targets.wheel.force-include]
"src/pytest_super_hooks/bin/pytest-super-hooks" = "pytest_super_hooks/bin/pytest-super-hooks"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "build>=1.0",
]
